# HealthTrack

./: .gitignore  CMakeLists.txt  HomeScreen.qml  LoginPage.qml  Main.qml  README.md  Sport.qml  main.cpp
QML/Main/: HomeScreen.qml  LoginPage.qml  Main.qml
QML/Nutrition/: AddFood.qml  FoodPortionPopup.qml  MealDetails.qml  NutritionDatePickerPopup.qml  NutritionMain.qml
QML/Profile/: ProfileMain.qml
QML/Settings/: SettingsMain.qml
QML/Sleep/: SleepMain.qml
QML/Sport/: SportMain.qml
QML/Statistics/: StatisticsMain.qml
src/app/: appcontroller.cpp  appcontroller.h  appstate.cpp  appstate.h  navigationmanager.cpp  navigationmanager.h
src/core/: appsettingsmanager.cpp  appsettingsmanager.h  databasemanager.cpp  databasemanager.h  unitconverter.cpp
src/features/bodymetrics/: bodycompositionmetrics.cpp  bodycompositionmetrics.h  bodymeasuremententry.cpp  bodymeasuremententry.h  bodymetricsrepository.cpp  bodymetricsrepository.h  bodymetricsservice.cpp  bodymetricsservice.h  bodymetricsviewmodel.cpp  bodymetricsviewmodel.h  bodysegmentanalysis.cpp  bodysegmentanalysis.h  segmentmetrics.cpp  segmentmetrics.h
src/features/hydration/: waterentry.cpp  waterentry.h  waterrepository.cpp  waterrepository.h  waterservice.cpp  waterservice.h  waterviewmodel.cpp  waterviewmodel.h
src/features/nutrition/: dailyentry.cpp  dailyentry.h  foodentry.cpp  foodentry.h  foodportioncalculator.cpp  foodportioncalculator.h  mealentry.cpp  mealentry.h  nutritionrepository.cpp  nutritionrepository.h  nutritionservice.cpp  nutritionservice.h  nutritionviewmodel.cpp  nutritionviewmodel.h
src/features/profile/: profilerepository.cpp  profilerepository.h  profileservice.cpp  profileservice.h  profileviewmodel.cpp  profileviewmodel.h  userprofile.cpp  userprofile.h
src/features/settings/: settingsviewmodel.cpp  settingsviewmodel.h
src/features/sleep/: sleepentry.cpp  sleepentry.h  sleeprepository.cpp  sleeprepository.h  sleepservice.cpp  sleepservice.h  sleepviewmodel.cpp  sleepviewmodel.h
src/features/sport/: exerciseentry.cpp  exerciseentry.h  sportrepository.cpp  sportrepository.h  sportservice.cpp  sportservice.h  sportviewmodel.cpp  sportviewmodel.h  workoutentry.cpp  workoutentry.h
src/features/statistics/: statisticsrepository.cpp  statisticsrepository.h  statisticsservice.cpp  statisticsservice.h  statisticsviewmodel.cpp  statisticsviewmodel.h
